--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-##Data Source Properties
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/tabula?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=ONU-3108cha
-#
-##JPA Properties
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.format_sql = TRUE
-#spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.open-in-view=false
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tabula?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=ONU-3108cha
+
+#JPA Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql = TRUE
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.open-in-view=false
 
 ###Logging Levels
 # Disable the default loggers
@@ -19,13 +19,13 @@ logging.level.blog = WARN
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
+#spring.jpa.hibernate.ddl-auto=create
 
 #security
 
