--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
           facebook:
             client-id: 1637864089712197
             client-secret: 896239764e7dd136232a8d5abf75c68b
+
+            spring:
+              datasource:
+                url: ${JDBC_DATABASE_URL}
+                username: ${JDBC_DATABASE_USERNAME}
+                password: ${JDBC_DATABASE_PASSWORD}
